spacing fixed for items

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,7 +18,7 @@ body, html {
   flex-direction: column;
   align-items: center;
   justify-content: center ;
-  margin-top: 20px;
+  margin: 20px auto;
   padding-top: 20px;
   height: 80vh;
 }
