--- a/frontend/src/MyComponents/global.css
+++ b/frontend/src/MyComponents/global.css
@@ -153,8 +153,7 @@ body, html {
     width: 90%;
     max-width: 800px;
     box-sizing: border-box;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 10px;
 }
   
   .card img {
@@ -194,11 +193,12 @@ body, html {
     font-size: 1.2em;
     color: #f1a10d;
   }
-/*   
+  
   @media (max-width: 600px) {
     .card {
       flex-direction: row;
       align-items: flex-start;
+      margin-left: 20px;
     }
   
     .card img {
@@ -218,7 +218,7 @@ body, html {
     .card-content .price {
       font-size: 1em;
     }
-  } */
+  }
 
 #contain{
   display: flex;
